--- a/read.html
+++ b/read.html
@@ -17,14 +17,15 @@
     <!-- Navigation -->
     <nav class="bg-[#4A3041] text-white shadow-lg sticky top-0 z-50">
         <div class="container mx-auto px-6 py-4">
-            <div class="flex items-center justify-between">
-                <a href="index.html" class="flex items-center space-x-3 hover:opacity-80 transition">
+            <div class="grid grid-cols-3 items-center">
+                <a href="index.html" class="flex items-center space-x-3 hover:opacity-80 transition justify-self-start">
                     <span class="text-3xl">📖</span>
                     <h1 class="text-2xl font-serif font-bold">Живая Библия</h1>
                 </a>
-                <div id="navigation-container" class="flex items-center gap-4">
+                <div id="navigation-container" class="flex items-center gap-4 justify-self-center">
                     <!-- Navigation will be inserted here by JS -->
                 </div>
+                <div class="justify-self-end"></div>
             </div>
         </div>
     </nav>
