--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li><a href="#featured" class="hover:text-amber-200 transition duration-300">Рекомендации</a></li>
                     <li><a href="#about" class="hover:text-amber-200 transition duration-300">О проекте</a></li>
                 </ul>
-                <button class="md:hidden text-white">
+                <button id="mobile-menu-button" class="md:hidden text-white p-2 hover:text-amber-200 transition-colors" aria-label="Открыть меню">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
                     </svg>
