--- a/index.html
+++ b/index.html
@@ -27,7 +27,18 @@
                     <li><a href="#library" class="hover:text-amber-200 transition duration-300">Библиотека</a></li>
                     <li><a href="#featured" class="hover:text-amber-200 transition duration-300">Рекомендации</a></li>
                     <li><a href="#about" class="hover:text-amber-200 transition duration-300">О проекте</a></li>
+                    <li><a href="settings.html" class="hover:text-amber-200 transition duration-300">⚙️ Настройки</a></li>
                 </ul>
+                
+                <!-- Translation selector -->
+                <div id="translation-selector" class="hidden md:block">
+                    <!-- Translation selector will be inserted here -->
+                </div>
+                
+                <!-- Mobile Translation Selector -->
+                <div id="mobile-translation-selector" class="hidden md:hidden">
+                    <!-- Mobile translation selector will be inserted here -->
+                </div>
                 <button id="mobile-menu-button" class="md:hidden text-white p-2 hover:text-amber-200 transition-colors" aria-label="Открыть меню">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
